--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
 
+  transparent_image: ^0.1.0
   http: ^0.12.0
 
   # The following adds the Cupertino Icons font to your application.
