--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
 
   transparent_image: ^0.1.0
   http: ^0.12.0
+  font_awesome_flutter: ^8.2.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +39,16 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  fonts:
+      - family: OpenSans
+        fonts:
+          - asset: fonts/os_bold.ttf
+            weight: 700
+          - asset: fonts/os_ita.ttf
+            style: italic
+          - asset: fonts/os_reg.ttf
+            style: normal
 
   # To add assets to your application, add an assets section, like this:
   # assets:
