--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
 
   transparent_image: ^0.1.0
   http: ^0.12.0
-  font_awesome_flutter: ^8.2.0
+  percent_indicator: ^1.0.11
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
